2011-04-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm: API change: replaced getHostname()
	with getHostHash()

2011-03-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2790_HOST_RESOURCES.pm:
	added CPU Load graphs. Still some problems with persistent
	indexing and naming.

	* perllib/Torrus/DevDiscover/MicrosoftWindows.pm:
	added to interface filter: PPP, Tunnel, WAN Miniport, and
	QoS Packet Scheduler virtual interfaces
	interface-level nodeid is now dependent on MAC address

2011-01-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/HTML.pm (makeURL):
	Now nodeid is used in HTML whenever available

2010-12-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
	
	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	new discovery parameter: RFC2863_IF_MIB::ifnick-from-ifname
	provides backwards compatibility with devices which have non-unique
	ifName values

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	ifDescr and ifName are checked for uniqueness before being used for
	default interface indexing	

2010-12-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm:
	added Port QoS stats (ME3400)

2010-12-19  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2662_ADSL_LINE.pm:
	re-organized the templates for Cisco 837 compatibility

2010-12-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* sup/webplain/torrus.css: slightly darker top and bottom shortcuts

	* perllib/Torrus/DevDiscover.pm (discover):
	New discovery parameter: X-tokenset-rrgraph-view

	* templates/default-tset.html: New view parameter: rrgraph-view

2010-11-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
        * perllib/Torrus/DevDiscover/CiscoIOS.pm:
        New discovery parameter: CiscoIOS::enable-dialer-interfaces
