@@ -22,9 +22,12 @@
 
 package Torrus::SNMP_Failures;
 
+
+use strict;
+use Digest::MD5 qw(md5_hex);
+
 use Torrus::DB;
 use Torrus::Log;
-use strict;
 
 
 sub new
@@ -112,7 +115,8 @@ sub mib_error
     my $count = $self->{'db_failures'}->get('M:' . $hosthash);
     $count = 0 unless defined($count);
 
-    $self->{'db_failures'}->put('m:' . $hosthash, $path . ':' . time());    
+    $self->{'db_failures'}->put('m:' . md5_hex($path) . ':' . $hosthash,
+                                $path . ':' . time());    
     $self->{'db_failures'}->put('M:' . $hosthash, $count + 1);
 
     my $global_count = $self->{'db_failures'}->get('c:mib_errors');
@@ -161,7 +165,7 @@ sub read
                     'time' => scalar(localtime( $timestamp )),
                 };
             }
-            elsif( $key =~ /^m:(.+)$/o )
+            elsif( $key =~ /^m:[0-9a-f]+:(.+)$/o )
             {
                 my $hosthash = $1;
                 my ($path, $timestamp) = split(/:/o, $val);
